# PIR-SBFR

./: .gitignore  CITATION.cff  LICENSE  README.md  REPRODUCIBILITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: pir_sbfr.yaml  pir_sbfr_aitodv2.yaml  pir_sbfr_model.yaml
configs/ablations/: a0_yolo_dsf.yaml  a1_degradation_augmentation.yaml  a2_scale_p5.yaml  a3_gsd.yaml  a3_mtf_psf.yaml  a4_mtf.yaml  a4_snr.yaml  a5_analytic_combined.yaml  a5_snr.yaml  a6_analytic_all.yaml  a9_full.yaml  a9_no_consistency.yaml
configs/ablations/factorial/: b0_shared_baseline.yaml  bp_p5_only.yaml  bs_scale_only.yaml  bsp_joint.yaml
configs/datasets/: aitodv2.yaml  dior.yaml
docs/: PAPER_SPEC.md
scripts/: _evaluation_common.py  benchmark.py  bootstrap_paired_coco.py  evaluate_unseen.py  metadata_controls.py  model_info.py  prepare_aitodv2.py  prepare_dior.py  robustness_grid.py  routing_probe.py  summarize_seeds.py  train_all_seeds.py  train_yolo11n_baseline.py
src/pir_sbfr/: __init__.py  coco_inference.py  inference.py
src/pir_sbfr/cli/: evaluate.py  predict.py  train.py
src/pir_sbfr/data/: __init__.py  aitodv2.py  common.py  degradations.py  dior.py
src/pir_sbfr/evaluation/: __init__.py  bootstrap.py  coco.py
src/pir_sbfr/models/: __init__.py  blocks.py  detector.py  loss.py  physical.py  router.py
src/pir_sbfr/training/: __init__.py  trainer.py
tests/: conftest.py  test_degradations.py  test_evaluation.py  test_inference.py  test_loss.py  test_model.py  test_physical.py  test_router.py
