[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pir-sbfr"
version = "0.1.0"
description = "Official implementation of PIR-SBFR for observation-constrained multiscale evidence allocation"
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = {text = "MIT"}
authors = [
  {name = "Zizheng Zhao"},
  {name = "Jingchao Liu"},
  {name = "Zixin Wang"},
  {name = "Xiaoyu Dong"},
  {name = "Zhirui Xue"},
  {name = "Junhao Hu"},
  {name = "Chengxin Zhu"},
]
dependencies = [
  "numpy>=1.24,<2.0",
  "opencv-python>=4.8,<5",
  "Pillow>=10,<12",
  "PyYAML>=6,<7",
  "pycocotools>=2.0.7,<2.1",
  "scipy>=1.10,<1.14",
  "torch==2.8.0",
  "torchvision==0.23.0",
  "ultralytics-thop>=2.0.0,<3",
  "ultralytics==8.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "pytest-cov>=5,<7",
  "ruff==0.15.22",
]

[project.scripts]
pir-train = "pir_sbfr.cli.train:main"
pir-predict = "pir_sbfr.cli.predict:main"
pir-eval = "pir_sbfr.cli.evaluate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py39"
